crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@arrays_in_cairo_m___array_bounds_and_memory_safety_2.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Arrays in Cairo-M - Array Bounds and Memory Safety 2"
input_file: mdtest/01-basics/05-arrays.md
---
Source:
fn test_array(arr: [u32; 3]) -> u32 {
    return arr[0];
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_array {
    parameters: [0]
    entry: 0

    0:
      %1 = arrayindex %0, 0
      return %1

  }

}
