crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@arrays_in_cairo_m___array_element_assignment.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Arrays in Cairo-M - Array Element Assignment"
input_file: mdtest/01-basics/05-arrays.md
---
Source:
fn assign_array_element() -> felt {
    let arr: [felt; 3] = [1, 2, 3];
    arr[0] = 42;           // Set first element
    arr[1] = 24;           // Set second element
    return arr[0];         // Return first element
}
============================================================
Generated MIR:
module {
  // Function 0
  fn assign_array_element {
    entry: 0

    0:
      %0 = makefixedarray [1, 2, 3]
      %1 = load %0[0]
      store 42 -> %0[0]
      %2 = load %0[1]
      store 24 -> %0[1]
      %3 = load %0[0]
      return %3

  }

}
