crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@arrays_in_cairo_m___array_of_structs.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Arrays in Cairo-M - Array of Structs"
input_file: mdtest/01-basics/05-arrays.md
---
Source:
        struct Result {
            values: [felt; 2],
            sum: felt,
        }

        fn compute_result(a: felt, b: felt) -> Result {
            return Result {
                values: [a, b],
                sum: a + b,
            };
        }
============================================================
Generated MIR:
module {
  // Function 0
  fn compute_result {
    parameters: [0, 1]
    entry: 0

    0:
      %3 = %0 + %1
      %6 = makestruct { values: %2, sum: %3 }
      return %6

  }

}
