crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@arrays_in_cairo_m___array_repetition_syntax.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Arrays in Cairo-M - Array Repetition Syntax"
input_file: mdtest/01-basics/05-arrays.md
---
Source:
fn test_main() -> u32 {
    let (arr1, arr2) = repeat_array_u32_one();
    return arr1[1] + arr2[2];
}

fn repeat_array_u32_one() -> ([u32;3], [u32; 4]) {
    return ([0u32; 3], [1u32; 4]);
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_main {
    entry: 0

    0:
      %0, %1 = call 1()
      %2 = maketuple %0, %1
      %3 = extracttuple %2, 0
      %4 = extracttuple %2, 1
      %5 = load %3[1]
      %6 = load %4[2]
      %7 = %5 U32Add %6
      return %7

  }

  // Function 1
  fn repeat_array_u32_one {
    entry: 0

    0:
      %0 = makefixedarray [0, 0, 0]
      %1 = makefixedarray [1, 1, 1, 1]
      %2 = maketuple %0, %1
      %3 = extracttuple %2, 0
      %4 = extracttuple %2, 1
      return (%3, %4)

  }

}
