crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@arrays_in_cairo_m___arrays_with_aggregate_types.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Arrays in Cairo-M - Arrays with Aggregate Types"
input_file: mdtest/01-basics/05-arrays.md
---
Source:
const POINTS: [(u32, u32); 3] = [(1, 2), (3, 4), (5, 6)];

fn test_main() -> u32 {
    return POINTS[0].0 + POINTS[1].1 + POINTS[2].0;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_main {
    entry: 0

    0:
      %0 = maketuple 1, 2
      %1 = maketuple 3, 4
      %2 = maketuple 5, 6
      %3 = makefixedarray [%0, %1, %2]
      %4 = load %3[0]
      %5 = load %3[0].0
      %6 = maketuple 1, 2
      %7 = maketuple 3, 4
      %8 = maketuple 5, 6
      %9 = makefixedarray [%6, %7, %8]
      %10 = load %9[1]
      %11 = load %9[1].1
      %12 = %5 U32Add %11
      %13 = maketuple 1, 2
      %14 = maketuple 3, 4
      %15 = maketuple 5, 6
      %16 = makefixedarray [%13, %14, %15]
      %17 = load %16[2]
      %18 = load %16[2].0
      %19 = %12 U32Add %18
      return %19

  }

}
