crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@arrays_in_cairo_m___arrays_with_aggregate_types_3.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Arrays in Cairo-M - Arrays with Aggregate Types 3"
input_file: mdtest/01-basics/05-arrays.md
---
Source:
    struct C { c: u32 }
    struct B { b: C }
    struct A { a: B }

    fn test_main() -> u32 {
        let arr: [A; 1] = [A { a: B { b: C { c: 0 } } }];
        arr[0].a.b.c = 42;
        return arr[0].a.b.c;
    }
============================================================
Generated MIR:
module {
  // Function 0
  fn test_main {
    entry: 0

    0:
      %0 = makestruct { c: 0 }
      %1 = makestruct { b: %0 }
      %2 = makestruct { a: %1 }
      %3 = makefixedarray [%2]
      %4 = load %3[0]
      store 42 -> %3[0].a.b.c
      %5 = load %3[0]
      %6 = load %3[0].a
      %7 = load %3[0].a.b
      %8 = load %3[0].a.b.c
      return %8

  }

}
