crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@arrays_in_cairo_m___basic_array_creation.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Arrays in Cairo-M - Basic Array Creation"
input_file: mdtest/01-basics/05-arrays.md
---
Source:
fn create_array() -> felt {
    let arr: [felt; 5] = [1, 2, 3, 0, 0];
    return arr[4];
}
============================================================
Generated MIR:
module {
  // Function 0
  fn create_array {
    entry: 0

    0:
      %0 = makefixedarray [1, 2, 3, 0, 0]
      %1 = load %0[4]
      return %1

  }

}
