crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@arrays_in_cairo_m___basic_array_creation_2.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Arrays in Cairo-M - Basic Array Creation 2"
input_file: mdtest/01-basics/05-arrays.md
---
Source:
fn create_array_u32() -> u32 {
    let arr: [u32; 3] = [1, 2, 3];
    return arr[0];
}
============================================================
Generated MIR:
module {
  // Function 0
  fn create_array_u32 {
    entry: 0

    0:
      %1 = 1 (u32)
      return %1

  }

}
